--- a/starlette-client/package.json
+++ b/starlette-client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://GauthamS-VIT.github.io/starlette_hotel_booking",
+  "homepage":"https://gauthams-vit.github.io/starlette_hotel_booking/",
   "name": "client",
   "version": "0.1.0",
   "private": true,
